message BondPrice {
  required float price = 1;
}
