message ServiceBondOutput {
  required float price = 1;
}
